--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <div id="container">
+</div id="cabecera">
+cabecera
     <div id="post">
 <h1>Aca comienza la historia </h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+</div>
 </div>
 </div>
 </body>
