--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
                     Mucho mas que ir a conferencias o salir en Youtube. 
-                    Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                    Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... 
+                    por ahora.</p>
+                    <p><img src="https://cdn.pixabay.com/photo/2014/07/15/23/36/github-394322_1280.png" width="100%"</p>
                 <p>Suscribete y dale like</p>
             </div>
 	    <div id="footer">
