Correccion de el pie de pagina del index

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
                     Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... 
                     por ahora.</p>
                     <p><img src="https://cdn.pixabay.com/photo/2014/07/15/23/36/github-394322_1280.png" width="100%"</p>
-                <p>Suscribete y dale like</p>
+                    <p>Suscribete y dale like</p>
+                </div>
+            <div id="footer">
+            Hecho con amor en Platzi &lt;3
             </div>
-	    <div id="footer">
-		Hecho con amor en Platzi 
-	    </div>
-        </div>
-    </body>
-</html>
+            </div>
+        </body>
+    </html>
+
+
+
