--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/cascada.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
-                    Mucho mas que ir a conferencias o salir en Youtube. 
-                    Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... 
-                    por ahora.</p>
-                    <p><img src="https://cdn.pixabay.com/photo/2014/07/15/23/36/github-394322_1280.png" width="100%"</p>
-                    <p>Suscribete y dale like</p>
-                </div>
-            <div id="footer">
-            Hecho con amor en Platzi &lt;3
+                <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
-            </div>
-        </body>
-    </html>
-
+	    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
+        </div>
+    </body>
+</html>
 
 
