--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
+                <img id="logo" src="imagenes/equipo-f86c6b2b-aa83-49c1-859c-e9bb2b9b6d58.webp" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
