--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="https://image.freepik.com/foto-gratis/pantalla-sistema-motor-busqueda-tabletas_53876-103042.jpg" />
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <p><img src="imagenes/equipo-f86c6b2b-aa83-49c1-859c-e9bb2b9b6d58.webp" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
